# patchscope

./: .env.example  .gitignore  PATCHSCOPE_PROJECT_BRIEF.md  README.md  pyproject.toml
.claude/: settings.local.json
patchscope/: __init__.py  agent.py
patchscope/.adk/: session.db
patchscope/agents/: complexity_assessor.py  patch_parser.py  reachability_analyzer.py
patchscope/agents/.adk/: session.db
patchscope/tools/: code_search.py  exploit_search.py  github_client.py  nvd_client.py  static_analysis.py  static_analyzer.py
patchscope/tools/.adk/: session.db
patchscope/utils/: diff_parser.py
patchscope/utils/.adk/: session.db
scripts/: replay_cve_2023_32233.json  replay_cve_2023_38545.json  run_analysis.py  test_cve.py
tests/: test_complexity_assessor.py  test_github_client.py  test_nvd_client.py  test_patch_parser.py  test_reachability_analyzer.py
